--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,11 @@ p {
 
 .header-wrapper,
 .intro-wrapper,
-.projects-wrapper {
+.projects-wrapper,
+.footer-wrapper {
   background-color: #f9efef;
+}
+
+html {
+  scroll-behavior: smooth;
 }
