--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,5 +1,5 @@
 .header-logo {
-  width: 125px;
+  width: 150px;
 }
 
 .header-links {
@@ -7,6 +7,7 @@
   letter-spacing: 0.1rem;
   text-decoration: none;
   color: #192a3d;
+  cursor: pointer;
 }
 
 .header-links:hover {
