--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,5 +1,13 @@
 .header-logo {
-  width: 150px;
+  width: 100px;
+}
+
+.navbar-toggler {
+  border: none !important;
+}
+
+.navbar-toggler:focus {
+  box-shadow: none !important;
 }
 
 .header-links {
