--- a/src/styles/AboutMe.css
+++ b/src/styles/AboutMe.css
@@ -13,6 +13,7 @@
 .skill-card {
   width: 30rem;
   background-color: #f9efef !important;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 
 .card-logo {
