--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -17,6 +17,8 @@
   min-height: 15rem;
   background-color: hsla(0, 0%, 100%, 0.6) !important;
   border: none !important;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
+    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 .projects-title {
